MDEV-31742 incorrect examined rows in case of stored function usage

The counter is global so we do not need add backup to it
if we do not zero it after taking the backup.